--- a/releases.yaml
+++ b/releases.yaml
@@ -1,4 +1,191 @@
 releases:
+    wb-2410:
+        packages-common: &packages-wb-2410
+            atecc-util: 0.4.11
+            ca-certificates-contactless: '0.1'
+            cmux: '1.2'
+            comerr-dev: 2.1-1.46.2-2+wb1
+            contactless-keyring: '0.1'
+            e2fsck-static: 1.46.2-2+wb1
+            e2fsprogs: 1.46.2-2+wb1
+            e2fsprogs-l10n: 1.46.2-2+wb1
+            emmcparm: 5.0.2
+            firmware-realtek: 20170823-1~bpo9+1
+            flash-simcom-a76xx: 1.1.1
+            frpc: 0.52.3
+            frps: 0.52.3
+            fuse2fs: 1.46.2-2+wb1
+            gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb108
+            gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb102
+            hubpower: '1.0'
+            intrahouse: 5.15.29
+            intrascada: 5.15.29
+            knxd: 0.14.51-1
+            knxd-dev: 0.14.51-1
+            knxd-tools: 0.14.51-1
+            libateccssl1.1: 0.2.5
+            libcom-err2: 1.46.2-2+wb1
+            libext2fs-dev: 1.46.2-2+wb1
+            libext2fs2: 1.46.2-2+wb1
+            libfdt1: 1.6.0-1
+            libmm-glib-dev: 1.20.0-1~bpo11+1-wb108
+            libmm-glib-doc: 1.20.0-1~bpo11+1-wb108
+            libmm-glib0: 1.20.0-1~bpo11+1-wb108
+            libmodbus-dev: 3.1.6-wb2
+            libmodbus5: 3.1.6-wb2
+            libnm-dev: 1.42.4-1~bpo11+1-wb102
+            libnm0: 1.42.4-1~bpo11+1-wb102
+            libsigrok4: 0.5.2-4
+            libsigrokdecode4: 0.5.3-4
+            libss2: 1.46.2-2+wb1
+            libwbmqtt1-5: 5.3.1
+            libwbmqtt1-5-dev: 5.3.1
+            libwbmqtt1-5-test-utils: 5.3.1
+            logsave: 1.46.2-2+wb1
+            mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
+            mobile-broadband-provider-info: 20230416-1
+            modbus-utils: 1.2.10
+            modbus-utils-rpc: 1.2.4
+            modemmanager: 1.20.0-1~bpo11+1-wb108
+            modemmanager-dev: 1.20.0-1~bpo11+1-wb108
+            modemmanager-doc: 1.20.0-1~bpo11+1-wb108
+            mplc4-oni-plc-w: 1.3.5.18656
+            mqtt-tools: 1.4.4
+            mqttui: 0.21.1-1
+            network-manager: 1.42.4-1~bpo11+1-wb102
+            network-manager-config-connectivity-debian: 1.42.4-1~bpo11+1-wb102
+            network-manager-dev: 1.42.4-1~bpo11+1-wb102
+            nodejs: 20.5.1-deb-1nodesource1
+            nodejs-16: 16.20.2-deb-1nodesource1
+            python-gsmmodem-new: '1:0.11'
+            python-gspread: 1:0.4.1
+            python-mosquitto: 1.3.4-2contactless1
+            python-nrf24: 1.0+1
+            python-wb-io: 1.2.3
+            python3-aioblescan: 0.2.14
+            python3-intelhex: 2.3.0-1
+            python3-json-rpc: 1.9.2.wb1
+            python3-mosquitto: 1.3.4-2contactless1
+            python3-mqttrpc: 1.2.5
+            python3-paho-socket: 0.0.3-2
+            python3-umodbus: 1.0.4-1+wb1
+            python3-wb-common: 2.2.1
+            python3-wb-mcu-fw-updater: 1.11.4
+            python3-wb-mqtt-metrics: 0.3.5
+            python3-wb-nm-helper: 1.34.6
+            python3-wb-test-suite-deps: 1.19.0
+            python3-wb-update-manager: 1.3.5
+            python3-zpl: 0.1.10-wb101
+            rapidscada: 6.3.0-1
+            serial-tool: 1.2.1
+            sigrok-cli: 0.7.2-1
+            ss-dev: 2.0-1.46.2-2+wb1
+            tailscale: 1.76.0
+            task-wb-base-system: 1.19.0
+            task-wb-common-pkgs: 1.19.0
+            telegraf-wb-cloud-agent: 1.29.1-wb2
+            wb-ble-tesliot: 1.1.1
+            wb-cc2652p-flasher: 1.0.0
+            wb-cloud-agent: 1.5.11
+            wb-configs: 3.33.0
+            wb-daemon-watchdogs: '1.1'
+            wb-demo-kit-configs: 1.8.2
+            wb-device-manager: 1.14.1
+            wb-diag-collect: 1.8.17
+            wb-dt-overlays: 1.7.0
+            wb-ec-firmware: 2.0.0
+            wb-essential: 1.19.0
+            wb-firmware-realtek: 1.0.3
+            wb-homa-adc: 2.6.7
+            wb-homa-gpio: 2.15.1
+            wb-homa-ism-radio: 1.17.3
+            wb-homa-rfsniffer: 1.0.9
+            wb-homa-w1: 2.2.13
+            wb-hwconf-manager: 1.63.0
+            wb-knxd-config: 1.1.5
+            wb-mb-explorer: 1.2.8
+            wb-mcu-fw-flasher: 1.4.0
+            wb-mcu-fw-updater: 1.11.4
+            wb-modbus-ext-scanner: 1.2.5
+            wb-mqtt-adc: 2.6.7
+            wb-mqtt-apcsnmp: '0.2'
+            wb-mqtt-bmp085: '1.2'
+            wb-mqtt-co2mon: 1.1.2
+            wb-mqtt-confed: 1.15.0
+            wb-mqtt-dac: 1.2.5
+            wb-mqtt-db: 2.8.17
+            wb-mqtt-db-cli: 1.4.6
+            wb-mqtt-gpio: 2.15.1
+            wb-mqtt-homeui: 2.103.3
+            wb-mqtt-iec104: 1.1.12
+            wb-mqtt-knx: 1.13.3
+            wb-mqtt-logs: 1.4.8
+            wb-mqtt-mbgate: 1.8.2
+            wb-mqtt-metrics: 0.3.5
+            wb-mqtt-opcua: 1.1.10
+            wb-mqtt-rfblinds: 1.0.3
+            wb-mqtt-serial: 2.146.0
+            wb-mqtt-smartbus: '1.2'
+            wb-mqtt-smartweb: 1.4.9
+            wb-mqtt-snmp: 1.3.7
+            wb-mqtt-urri: 1.2.4
+            wb-mqtt-w1: 2.2.13
+            wb-mqtt-zabbix: '0.2'
+            wb-nm-helper: 1.34.6
+            wb-rules: 2.22.0
+            wb-rules-system: 1.12.3
+            wb-suite: 1.19.0
+            wb-test-suite: '1.20'
+            wb-test-suite-deps: 1.12.0
+            wb-test-suite-dummy: 1.19.0
+            wb-update-manager: 1.3.5
+            wb-update-notifier: 0.1.0
+            wb-utils: 4.25.0
+            wb-welrok: 0.0.9
+            wb-zigbee2mqtt: 1.3.5
+            webif: '1.5'
+            z-way-server: 4.1.1-lws16
+            z-way4wb: '1.4'
+            zbw: '1.2'
+            zigbee2mqtt: 1.40.2-wb101
+            zigbee2mqtt-1.18.1: 1.18.1-wb103
+
+        wb6/bullseye:
+            <<: *packages-wb-2410
+
+            linux-headers-wb6: 5.10.35-wb172
+            linux-image-wb6: 5.10.35-wb172
+            u-boot-wb6: 2:2021.10+wb1.7.3
+            linux-libc-dev: 5.10.35-wb172
+            u-boot-tools-wb: 2:2021.10+wb1.7.3
+            wb-bootlet-wb6x: 5.10.35-wb172-fs1.3.4-deb11-202410221540
+
+        wb7/bullseye:
+            <<: *packages-wb-2410
+
+            linux-headers-wb7: 5.10.35-wb172
+            linux-image-wb7: 5.10.35-wb172
+            u-boot-wb7: 2:2021.10+wb1.7.3
+            linux-libc-dev: 5.10.35-wb172
+            wb-bootlet-wb7x: 5.10.35-wb172-fs1.3.4-deb11-202410221544
+            u-boot-tools-wb: 2:2021.10+wb1.7.3
+            mplc4-wirenboard7: 1.3.5.18656
+
+        wb8/bullseye:
+            <<: *packages-wb-2410
+
+            linux-headers-wb8: 6.8.0-wb114
+            linux-image-wb8: 6.8.0-wb114
+            linux-libc-dev: 6.8.0-wb114
+            wb-bootlet-wb8x: 6.8.0-wb114-fs1.3.4-deb11-202410221540
+
+            u-boot-tools-wb: 2:2024.01+wb1.0.1
+            u-boot-wb8: 2:2024.01+wb1.0.1
+
+            task-wirenboard-wb8: 1.19.0
+            arm-trusted-firmware: 2.10.0+dfsg-1+wb2
+            e2fsprogs-udeb: 1.46.2-2+wb1
+
     wb-2407:
         packages-common: &packages-wb-2407
             atecc-util: 0.4.11
@@ -196,194 +383,6 @@ releases:
         wb7/bullseye:
             <<: *packages-wb-2407-wb7-bullseye
             wb-mqtt-homeui: 2.93.11-e1d931dd-001
-
-    wb-2404:
-        packages-common: &packages-wb-2404
-            atecc-util: 0.4.11
-            ca-certificates-contactless: '0.1'
-            cmux: '1.2'
-            comerr-dev: 2.1-1.46.2-2+wb1
-            contactless-keyring: '0.1'
-            e2fsck-static: 1.46.2-2+wb1
-            e2fsprogs: 1.46.2-2+wb1
-            e2fsprogs-l10n: 1.46.2-2+wb1
-            emmcparm: 5.0.1
-            firmware-realtek: 20170823-1~bpo9+1
-            flash-simcom-a76xx: 1.1.1
-            frpc: 0.52.3
-            frps: 0.52.3
-            fuse2fs: 1.46.2-2+wb1
-            gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb108
-            gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb102
-            hubpower: '1.0'
-            intrahouse: 5.15.29
-            intrascada: 5.15.29
-            knxd: 0.14.51-1
-            knxd-dev: 0.14.51-1
-            knxd-examples: 0.11.15-1-wb1
-            knxd-tools: 0.14.51-1
-            libateccssl1.1: 0.2.5
-            libcom-err2: 1.46.2-2+wb1
-            libext2fs-dev: 1.46.2-2+wb1
-            libext2fs2: 1.46.2-2+wb1
-            libfdt1: 1.6.0-1
-            libmm-glib-dev: 1.20.0-1~bpo11+1-wb108
-            libmm-glib-doc: 1.20.0-1~bpo11+1-wb108
-            libmm-glib0: 1.20.0-1~bpo11+1-wb108
-            libmodbus-dev: 3.1.6-wb2
-            libmodbus5: 3.1.6-wb2
-            libnm-dev: 1.42.4-1~bpo11+1-wb102
-            libnm0: 1.42.4-1~bpo11+1-wb102
-            libsigrok4: 0.5.2-4
-            libsigrokdecode4: 0.5.3-4
-            libss2: 1.46.2-2+wb1
-            libwbmqtt1-4: 4.5.0
-            libwbmqtt1-4-dev: 4.5.0
-            libwbmqtt1-4-test-utils: 4.5.0
-            linux-libc-dev: 5.10.35-wb167
-            logsave: 1.46.2-2+wb1
-            mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
-            mobile-broadband-provider-info: 20230416-1
-            modbus-utils: 1.2.10
-            modbus-utils-rpc: 1.2.2
-            modemmanager: 1.20.0-1~bpo11+1-wb108
-            modemmanager-dev: 1.20.0-1~bpo11+1-wb108
-            modemmanager-doc: 1.20.0-1~bpo11+1-wb108
-            mplc4-oni-plc-w: 1.3.5.18656
-            mqtt-tools: 1.4.4
-            network-manager: 1.42.4-1~bpo11+1-wb102
-            network-manager-config-connectivity-debian: 1.42.4-1~bpo11+1-wb102
-            network-manager-dev: 1.42.4-1~bpo11+1-wb102
-            nodejs: 16.18.1-deb-1nodesource1
-            python-gsmmodem-new: '1:0.11'
-            python-gspread: 1:0.4.1
-            python-mosquitto: 1.3.4-2contactless1
-            python-nrf24: 1.0+1
-            python-wb-io: 1.2.3
-            python3-aioblescan: 0.2.14
-            python3-intelhex: 2.3.0-1
-            python3-json-rpc: 1.9.2.wb1
-            python3-mosquitto: 1.3.4-2contactless1
-            python3-mqttrpc: 1.2.4
-            python3-paho-socket: 0.0.3-1
-            python3-umodbus: 1.0.4-1+wb1
-            python3-wb-common: 2.1.2
-            python3-wb-mcu-fw-updater: 1.10.12
-            python3-wb-mqtt-metrics: 0.3.3
-            python3-wb-nm-helper: 1.33.3
-            python3-wb-test-suite-deps: 1.18.6
-            python3-wb-update-manager: 1.3.4
-            python3-zpl: 0.1.10-wb101
-            rapidscada: 6.2.1-1
-            serial-tool: 1.2.1
-            sigrok-cli: 0.7.2-1
-            ss-dev: 2.0-1.46.2-2+wb1
-            tailscale: 1.70.0
-            task-wb-base-system: 1.18.6
-            task-wb-common-pkgs: 1.18.6
-            telegraf-wb-cloud-agent: 1.29.1
-            u-boot-tools-wb: 2:2021.10+wb1.7.1
-            wb-ble-tesliot: 1.1.1
-            wb-cc2652p-flasher: 1.0.0
-            wb-cloud-agent: 1.3.3-wb106
-            wb-configs: 3.22.1-wb104
-            wb-daemon-watchdogs: '1.1'
-            wb-demo-kit-configs: 1.8.0
-            wb-device-manager: 1.7.0
-            wb-diag-collect: 1.8.11
-            wb-dt-overlays: 1.6.1
-            wb-ec-firmware: 1.3.2
-            wb-essential: 1.18.6
-            wb-firmware-realtek: 1.0.3
-            wb-homa-adc: 2.6.5
-            wb-homa-gpio: 2.13.1
-            wb-homa-ism-radio: 1.17.3
-            wb-homa-rfsniffer: 1.0.9
-            wb-homa-w1: 2.2.10
-            wb-hwconf-manager: 1.58.8
-            wb-knxd-config: 1.1.3
-            wb-mb-explorer: 1.2.8
-            wb-mcu-fw-flasher: 1.3.2
-            wb-mcu-fw-updater: 1.10.12
-            wb-modbus-ext-scanner: 1.2.4
-            wb-mqtt-adc: 2.6.5
-            wb-mqtt-apcsnmp: '0.2'
-            wb-mqtt-bmp085: '1.2'
-            wb-mqtt-co2mon: 1.1.1
-            wb-mqtt-confed: 1.14.7
-            wb-mqtt-dac: 1.2.4
-            wb-mqtt-db: 2.8.13
-            wb-mqtt-db-cli: 1.4.5
-            wb-mqtt-gpio: 2.13.1
-            wb-mqtt-homeui: 2.82.1-wb110
-            wb-mqtt-iec104: 1.1.7
-            wb-mqtt-knx: 1.12.8
-            wb-mqtt-logs: 1.4.7
-            wb-mqtt-mbgate: 1.6.3
-            wb-mqtt-metrics: 0.3.3
-            wb-mqtt-opcua: 1.1.4
-            wb-mqtt-rfblinds: 1.0.2
-            wb-mqtt-serial: 2.118.0-wb104
-            wb-mqtt-smartbus: '1.2'
-            wb-mqtt-smartweb: 1.4.4
-            wb-mqtt-snmp: 1.3.0
-            wb-mqtt-urri: 1.2.1
-            wb-mqtt-w1: 2.2.10
-            wb-mqtt-zabbix: '0.2'
-            wb-nm-helper: 1.33.3
-            wb-rules: 2.20.8
-            wb-rules-system: 1.11.0
-            wb-suite: 1.18.6
-            wb-test-suite: '1.20'
-            wb-test-suite-deps: 1.12.0
-            wb-test-suite-dummy: 1.18.6
-            wb-update-manager: 1.3.4
-            wb-update-notifier: 0.1.0
-            wb-utils: 4.20.5
-            wb-zigbee2mqtt: 1.3.5
-            webif: '1.5'
-            z-way-server: 4.1.1-lws16
-            z-way4wb: '1.4'
-            zbw: '1.2'
-            zigbee2mqtt: 1.35.3-wb101
-            zigbee2mqtt-1.18.1: 1.18.1-wb102
-
-        wb6/bullseye:
-            <<: *packages-wb-2404
-
-            linux-headers-wb6: 5.10.35-wb167
-            linux-image-wb6: 5.10.35-wb167
-            u-boot-wb6: 2:2021.10+wb1.7.1
-            wb-bootlet-wb6x: 5.10.35-wb167-fs1.2.3-deb11-202403291409
-
-        wb7/bullseye:
-            <<: *packages-wb-2404
-
-            linux-headers-wb7: 5.10.35-wb167
-            linux-image-wb7: 5.10.35-wb167
-            u-boot-wb7: 2:2021.10+wb1.7.1
-            wb-bootlet-wb7x: 5.10.35-wb167-fs1.2.3-deb11-202403291409
-            mplc4-wirenboard7: 1.3.5.18656
-
-        wb8/bullseye:
-            <<: *packages-wb-2404
-
-            linux-headers-wb8: 6.8.0-wb101
-            linux-image-wb8: 6.8.0-wb101
-            linux-libc-dev: 6.8.0-wb101
-            wb-bootlet-wb8x: 6.8.0-wb101-fs1.3.2-deb11-202407251008
-
-            u-boot-wb8: 2:2024.01+wb1.0.0
-            u-boot-tools: 2:2024.01+wb1.0.0
-            u-boot-tools-wb: 2:2024.01+wb1.0.0
-
-            wb-hwconf-manager: 1.61.1
-            wb-configs: 3.23.1-wb104+2
-            wb-utils: 4.21.2-wb100
-            task-wirenboard-wb8: 1.19.0
-            wb-dt-overlays: 1.7.0
-            wb-rules: 2.20.13
-            zigbee2mqtt: 1.39.0-wb101
 
     wb-2307:
         packages-common: &packages-wb-2307
@@ -737,6 +736,13 @@ releases:
             linux-image-wb7: 5.10.35-wb133+wb102
             u-boot-wb7: 2:2021.10+wb1.5.0
 
+    wb-2304-70549e24:
+        wb7/bullseye:
+            <<: *packages-wb-2304-wb7-bullseye
+            wb-configs: 3.13.1-70549e24-001
+            wb-mqtt-homeui: 2.59.0-70549e24-001
+            wb-utils: 4.8.1-70549e24-002
+
     wb-2207:
         packages-common-stretch: &packages-wb-2207-stretch
             atecc-util: 0.4.7
@@ -960,13 +966,6 @@ releases:
             z-way-server: 2.2.5-1
             u-boot-tools: 2:2017.03+wb-2
             u-boot-tools-wb: 2:2017.03+wb-2
-
-    wb-2304-70549e24:
-        wb7/bullseye:
-            <<: *packages-wb-2304-wb7-bullseye
-            wb-configs: 3.13.1-70549e24-001
-            wb-mqtt-homeui: 2.59.0-70549e24-001
-            wb-utils: 4.8.1-70549e24-002
 
     wb-2207-bullseye-transition:
         packages-common-bullseye-transition: &packages-wb-2207-bullseye-transition
@@ -1355,6 +1354,7 @@ staging:
         - "libwbmqtt1-test-utils"
         - "libwbmqtt1-2*"
         - "libwbmqtt1-3*"
+        - "libwbmqtt1-4*"
         - "mqtt-logger"
         - "python-json-rpc"
         - "python-mqttrpc"
