--- a/releases.yaml
+++ b/releases.yaml
@@ -174,10 +174,10 @@ releases:
         wb8/bullseye:
             <<: *packages-wb-2410
 
-            linux-headers-wb8: 6.8.0-wb115
-            linux-image-wb8: 6.8.0-wb115
-            linux-libc-dev: 6.8.0-wb115
-            wb-bootlet-wb8x: 6.8.0-wb115-fs1.3.4-deb11-202410221540
+            linux-headers-wb8: 6.8.0-wb114+wb100
+            linux-image-wb8: 6.8.0-wb114+wb100
+            linux-libc-dev: 6.8.0-wb114+wb100
+            wb-bootlet-wb8x: 6.8.0-wb114+wb100-fs1.3.4-deb11-202410221540
 
             u-boot-tools-wb: 2:2024.01+wb1.0.1
             u-boot-wb8: 2:2024.01+wb1.0.1
