--- a/releases.yaml
+++ b/releases.yaml
@@ -1040,11 +1040,12 @@ releases:
             m1w2-21: 4.31.0     # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2G21: 4.33.5
             m1w2G3: 4.33.5
+            # WB-MAI2
+            mai2cc: 4.31.9
             # WB-MS
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mir64: 4.31.9
             mir64_gd: 4.31.9
-            mai2cc: 4.31.9
             ms-33: 4.31.9
             msv2-4.0: 4.31.9
             msv2-4.0_gd: 4.31.9
@@ -1148,11 +1149,12 @@ releases:
             m1w2-21: 4.31.0     # на данном таргете, начиная с версии 4.32.0, прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             m1w2G21: 4.33.5
             m1w2G3: 4.33.5
+            # WB-MAI2
+            mai2cc: 4.31.12
             # WB-MS
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mir64: 4.31.9
             mir64_gd: 4.31.9
-            mai2cc: 4.31.9
             ms-33: 4.31.9
             msv2-4.0: 4.31.9
             msv2-4.0_gd: 4.31.9
