--- a/releases.yaml
+++ b/releases.yaml
@@ -1180,24 +1180,24 @@ releases:
             mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.9.1
             # WB-MAP
-            map3e: 2.7.5
+            map3e: 2.7.5            # нет в наличии устройства для проверок новых прошивок
             map3e16: 2.8.1
-            map3e_36: 2.10.1
-            map3e_031f6: 2.10.1
-            map3eG: 2.10.1
-            map3h: 2.7.4
-            map3h51: 2.10.1
-            map6s: 2.6.3            #таргет не проходит стенд калибровки на прошивке 2.7.1
-            map6s51: 2.6.3          #таргет не проходит стенд калибровки на прошивке 2.7.1
-            map6se: 2.10.1
-            map12e: 2.8.1
-            map12eG: 2.8.1
-            map12h: 2.7.4
-            map3eG16: 2.10.1
-            map3evG16: 2.10.1
-            map6seG16: 2.10.1
+            map3e_36: 2.10.2
+            map3e_031f6: 2.10.2
+            map3eG: 2.10.2
+            map3h: 2.7.4            # нет в наличии устройства для проверок новых прошивок
+            map3h51: 2.10.2
+            map6s: 2.6.3            # таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6s51: 2.6.3          # таргет не проходит стенд калибровки на прошивке 2.7.1
+            map6se: 2.10.2
+            map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
+            map12eG: 2.10.2
+            map12h: 2.7.4           # таргет не проходит стенд калибровки на прошивке 2.7.5
+            map3eG16: 2.10.2
+            map3evG16: 2.10.2
+            map6seG16: 2.10.2
             map6sG16: 2.6.3         #таргет не проходит стенд калибровки на прошивке 2.7.1
-            map6semG16: 2.10.1
+            map6semG16: 2.10.2
             # WB-MRGB
             mrgbw: 3.3.4        # на данном таргете на версиях старше 3.3.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrgbwG: 3.5.1
