--- a/releases.yaml
+++ b/releases.yaml
@@ -206,7 +206,7 @@ releases:
 
             mplc4-oni-plc-w: 1.3.6.21566
             wb-mqtt-homeui: 2.103.3-wb103-cb8ea449-1
-            wb-utils: 4.25.1-cb8ea449
+            wb-utils: 4.25.1-cb8ea449-1
             wb-suite: 1.19.0-cb8ea449
             wb-mqtt-serial: 2.146.0-wb101-cb8ea449-1
 
