--- a/releases.yaml
+++ b/releases.yaml
@@ -1042,10 +1042,12 @@ releases:
             m1w2G3: 4.33.5
             # WB-MAI2
             mai2cc: 4.31.9
-            # WB-MS
+            # WB-MIR
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mir64: 4.31.9
             mir64_gd: 4.31.9
+            mir_gdf8: 4.32.0
+            # WB-MS
             ms-33: 4.31.9
             msv2-4.0: 4.31.9
             msv2-4.0_gd: 4.31.9
@@ -1151,10 +1153,12 @@ releases:
             m1w2G3: 4.33.5
             # WB-MAI2
             mai2cc: 4.31.12
-            # WB-MS
+            # WB-MIR
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mir64: 4.31.9
-            mir64_gd: 4.31.9
+            mir64: 4.32.0
+            mir64_gd: 4.32.0
+            mir_gdf8: 4.32.0
+            # WB-MS
             ms-33: 4.31.9
             msv2-4.0: 4.31.9
             msv2-4.0_gd: 4.31.9
