--- a/releases.yaml
+++ b/releases.yaml
@@ -153,7 +153,7 @@ releases:
             webif: '1.5'
             z-way-server: 4.1.1-lws16
             z-way4wb: '1.4'
-            zbw: '1.2'
+            zbw: '1.2-wb1'
             zigbee2mqtt: 1.42.0-5-gbc6eccf-wb101
             zigbee2mqtt-1.18.1: 1.18.1-wb103
         wb6/bullseye:
