--- a/releases.yaml
+++ b/releases.yaml
@@ -44,7 +44,7 @@ releases:
             libss2: 1.46.2-2+wb1
             libwbmqtt1-5: 5.3.3
             libwbmqtt1-5-dev: 5.3.3
-            libwbmqtt1-5-test-utils: 5.3.3  
+            libwbmqtt1-5-test-utils: 5.3.3
             logsave: 1.46.2-2+wb1
             mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
             mobile-broadband-provider-info: 20230416-1
@@ -56,7 +56,7 @@ releases:
             mosquitto: 2.0.20-1-wb101
             mosquitto-clients: 2.0.20-1-wb101
             mosquitto-dev: 2.0.20-1-wb101
-            mplc4-oni-plc-w: 1.3.6.21566  
+            mplc4-oni-plc-w: 1.3.6.21566
             mqtt-tools: 1.4.4
             mqttui: 0.21.1-1
             network-manager: 1.42.4-1~bpo11+1-wb102
@@ -89,9 +89,9 @@ releases:
             ss-dev: 2.0-1.46.2-2+wb1
             tailscale: 1.80.0
             task-wb-base-system: 1.19.0
-            task-wb-common-pkgs: 1.19.0  
-            telegraf-wb-cloud-agent: 1.29.1-wb2  
-            wb-ble-tesliot: 1.1.1  
+            task-wb-common-pkgs: 1.19.0
+            telegraf-wb-cloud-agent: 1.29.1-wb2
+            wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
             wb-cloud-agent: 1.5.12
             wb-configs: 3.35.0
@@ -123,7 +123,7 @@ releases:
             wb-mqtt-db: 2.8.17
             wb-mqtt-db-cli: 1.4.6
             wb-mqtt-gpio: 2.15.2
-            wb-mqtt-homeui: 2.107.7
+            wb-mqtt-homeui: 2.107.7-wb100
             wb-mqtt-iec104: 1.1.13
             wb-mqtt-knx: 1.13.3
             wb-mqtt-logs: 1.4.8
@@ -178,7 +178,7 @@ releases:
             u-boot-tools-wb: 2:2021.10+wb1.7.3
             wb-bootlet-wb7x: 5.10.35-wb173-fs1.3.7-deb11-202412021728
 
-            tm-cpps: '16304'  
+            tm-cpps: '16304'
             mplc4-wirenboard7: 1.3.6.21566
 
         wb8/bullseye:
@@ -193,10 +193,10 @@ releases:
 
             arm-trusted-firmware: 2.10.0+dfsg-1+wb2
             e2fsprogs-udeb: 1.46.2-2+wb1
-            task-wirenboard-wb8: 1.19.0  
-          
+            task-wirenboard-wb8: 1.19.0
+
             tm-cpps: '16402'
-            
+
     wb-2410:
         packages-common: &packages-wb-2410
             atecc-util: 0.4.11
