--- a/releases.yaml
+++ b/releases.yaml
@@ -1320,7 +1320,22 @@ releases:
             ref-df: 1.1.3
             refu: 1.4.4
             # ONOKOM
-            ok_tcl1b: 0.3.4
+            ok_tcl1b: 0.3.6
+            ok_tcl3b: 0.4.6
+            ok_aux1b: 0.3.6
+            ok_dk1b: 0.4.1
+            ok_dk5b: 0.4.3
+            ok_gr1b: 0.3.8
+            ok_gr3b: 0.4.1
+            ok_hr1b: 0.3.8
+            ok_hs3b: 0.4.6
+            ok_hs5b: 0.4.3
+            ok_hs6b: 0.4.5
+            ok_md1b: 0.4.6
+            ok_md3b: 0.3.9
+            ok_mdvrfb: 0.4.3
+            ok_me1b: 0.3.6
+            ok_tn1b: 0.4.1
 
     _firmwares_testing:
         firmwares:
@@ -1438,7 +1453,22 @@ releases:
             ref-df: 1.1.3
             refu: 1.4.4
             # ONOKOM
-            ok_tcl1b: 0.3.4
+            ok_tcl1b: 0.3.6
+            ok_tcl3b: 0.4.6
+            ok_aux1b: 0.3.6
+            ok_dk1b: 0.4.1
+            ok_dk5b: 0.4.3
+            ok_gr1b: 0.3.8
+            ok_gr3b: 0.4.1
+            ok_hr1b: 0.3.8
+            ok_hs3b: 0.4.6
+            ok_hs5b: 0.4.3
+            ok_hs6b: 0.4.5
+            ok_md1b: 0.4.6
+            ok_md3b: 0.3.9
+            ok_mdvrfb: 0.4.3
+            ok_me1b: 0.3.6
+            ok_tn1b: 0.4.1
 
 suites:
     all:
