--- a/releases.yaml
+++ b/releases.yaml
@@ -1409,6 +1409,7 @@ releases:
             msw5GL: 4.31.13
             msw5Gth: 4.31.13
             msw5Gpb: 4.31.13
+            msv2Gth: 4.31.13
             # WB-MD
             mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
