--- a/releases.yaml
+++ b/releases.yaml
@@ -1248,6 +1248,7 @@ releases:
             m1w2G3: 4.33.5
             # WB-MAI2
             mai2cc: 4.31.12
+            mai2ccG3: 4.31.13
             # WB-MIR
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mir64: 4.32.0
@@ -1381,7 +1382,8 @@ releases:
             m1w2G21: 4.33.5
             m1w2G3: 4.33.5
             # WB-MAI2
-            mai2cc: 4.31.12
+            mai2cc: 4.31.13
+            mai2ccG3: 4.31.13
             # WB-MIR
             mir: 4.29.11        # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mir64: 4.32.0
